@@ -1,0 +1,2 @@
+./yiic migrate down 100
+./yiic migrate down 100 --connectionID=testdb
