@@ -81,3 +81,8 @@ protected/tests/unit/user_model.php -- see above
 protected/tests/unit/user_identity_component.php -- Created a test to verify the form checked the database for user names and passwords rather then static fields
 
 protected/components/UserIdentity.php -- This is the component responsible for sessions. I linked it with the user model for authentication.
+
+protected/migrate_bottom.sh -- Simple script to aid in migration testing. This will revert to the first migration (assuming there is less then 100 migrations)
+protected/migrations/m130129_000236_increase_user_password_length.php -- This migration and the ones below have been crashing and were written poorly. They did not run correctly on the test database. I fixed this
+protected/migrations/m130129_220200_create_user_indices.php
+protected/migrations/m130129_220748_add_default_admin_user.php
